		- Shopkeeper names lost in NetHack 2.2a reappear
		- C343-345 "Display the plural form of the "You can't. They are cursed." message as opposed to the singular when trying to remove a cursed pair of lenses." (from GruntHack)
		- C343-243 "Hero can throw without hands" (as polymorphed monster, for example killer bee) (from GruntHack)
		- C343-305 "Attacking with an applied polearm ignores the "confirm" option."  (from GruntHack)
		- C343-81 "Ghosts can be slimed."
		Patches are linked at http://nethackwiki.com/wiki/User:Bulwersator/UnNetHackPlus_bug_tracking
	* UnNetHack bug fixes
		- Angered quest guardians will no longer go berserk.
	* Flavour stuff
		- Far look during hallucination should be more amusing
		- New hallucinatory monsters, monster sounds (original ones and from NAO) and bottle types
		- More random gravestone epitaphs (from NAO and original ones)
		- More t-shirt messages (from NAO and original ones)
		- Names for player statues on Medusa level are now based on list of people petrified by Medusa on public servers instead of top ten local players.
		- Kobolds vs elves grudge added
		- Wands and Gain Ability 0.1 by Grunt
		- Trees planted on: quest levels of wizard and samurai, nymph level
		- Tree Cutting v1.0 by Michael Lehotay
	* Starting equipment changes
		- Gnomes may start with candles (idea from dnethack), and dwarves with pickaxe (from SporkHack)
		- Orcs start game with sickness potion (from Sporkhack)
		- Wizards may start with cloak of protection/invisibility/displacement/robe/oilskin cloak/alchemy smock (based on idea from Sporkhack)
		- Scroll of identify universally known (from SporkHack)
		- Wearing fedora increases luck of archaeologists
		- Archaeologists start with key and may start with potions of object detection, scrolls of gold detection, chances for other equipment tweaked a bit
	* Nerfing
		- Increase chances of getting a golem from polypiling (idea from SporkHack)